# AIMeter

./: CLAUDE.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: history.rs  main.rs  notifications.rs  providers.rs  usage.rs
src-tauri/src/ai/: insights.rs  insights_test.rs  mod.rs  predictions.rs  predictions_test.rs
src-tauri/src/providers/: claude_code.rs  mod.rs  openai.rs
src/components/: Dashboard.test.tsx  Dashboard.tsx  Settings.test.tsx  Settings.tsx  UsageCard.test.tsx  UsageCard.tsx
src/components/ai/: InsightsPanel.test.tsx  InsightsPanel.tsx  PredictionChart.tsx
src/hooks/: useInsights.test.ts  useInsights.ts  useUsage.test.ts  useUsage.ts
src/styles/: global.css
src/utils/: format.test.ts  format.ts
